test scripts: add --illegal-access=warn